--- a/rate/templates/base.html
+++ b/rate/templates/base.html
@@ -4,34 +4,33 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-  {%if title%}
-
-  <title>{{title}}</title>
-
-  {%endif%}
-
+  {% if title %}
+  <title>RateMe~Application- {{title}}</title>
+  {% else %}
+    <title> RateMe~Application </title>
+  {% endif %}
   {% block styles %}
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+        integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
     {% bootstrap_css %}
-
+      <link rel="stylesheet" href="{% static 'css/styles.css'%}">
   {% endblock %}
+
 
 </head>
-
 <body>
+    {% include "navbar.html" %}
 
-  {% block content %}  {%endblock%}
-
-
-  {% block scripts %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    {% bootstrap_javascript %}
-  {% endblock %}
-
+    {% block content %}
+     {%endblock%}
+    {% block scripts %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     {% bootstrap_javascript %}
+    {% endblock %}
 </body>
 </html>
