--- a/rate/templates/navbar.html
+++ b/rate/templates/navbar.html
@@ -1,60 +1,47 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="/">
-        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
-      </a>
-  
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
-  
-    <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item">
-          Home
-        </a>
-  
-        <a class="navbar-item">
-          Projects
-        </a>
-  
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link">
-            More
-          </a>
-  
-          <div class="navbar-dropdown">
-            <a class="navbar-item">
-              Post a Project
-            </a>
-            <a class="navbar-item">
-              My Profile
-            </a>
-            <a class="navbar-item">
-              Update Profile
-            </a>
-            <hr class="navbar-divider">
-            <a class="navbar-item">
-              Logout
-            </a>
-          </div>
-        </div>
-      </div>
-  
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <a class="button is-primary">
-              <strong>Sign up</strong>
-            </a>
-            <a class="button is-light">
-              Log in
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav>
+{% load static %}
+<link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Charmonman|Kodchasan|Dancing+Script|Spirax" rel="stylesheet">
+
+     <nav class="navbar navbar-expand navbar-light ">
+            <a href="#"></a>
+            <a class="instalogo fab fa-instagram" href="/"><span style="font-size: 50px;" >RateMe</span></a>
+         
+            <a href="#"></a>
+
+            <div class="search">
+                <form class="form-inline my-2 my-lg-0" role="search" action="/">
+                    <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search"
+                        name="search_user">
+                    <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+
+            <ul class="navbar-nav mr-auto nav-right-items nav_icons">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">
+                        <i class="fas fa-home nav-icons"><span class="sr-only">(current)</span></i>
+                    </a>
+                </li>
+               
+                    <li class="dropdown" >
+                        <a href="#" data-toggle="dropdown"><i class="far fa-user"></i>
+                            <span><img src="" alt=""
+                                    style="border-radius: 50%; width:50px; height:50px; border-color: brown; border-width: 1px;"></span>
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu" st>
+                            <li><i class="fas fa-plus btn btn-outline-info btn-sm"></i><a
+                                    href="/"style="font-size: 20px;">Post a Project</a></li>
+                            <li><i class="fas fa-user btn btn-outline-info btn-sm"></i><a
+                                    href="/"style="font-size: 20px;">My Profile</a></li>
+                            <li><i class="far fa-user-edit btn btn-outline-info btn-sm"></i><a
+                                    href="/" style="font-size: 20px;">Update Profile</a>
+                                <div class="card-footer">
+                                    <a class="text-muted"><i class="fas fa-sign-out-alt "></i><a
+                                            href="" style="font-size: 20px;">Logout</a>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </ul>
+      </nav>
