Styles the navbar

--- a/rate/templates/navbar.html
+++ b/rate/templates/navbar.html
@@ -3,7 +3,7 @@
 
      <nav class="navbar navbar-expand navbar-light ">
             <a href="#"></a>
-            <a class="instalogo fab fa-instagram" href="/"><span style="font-size: 50px;" >RateMe</span></a>
+            <a class="instalogo" href="/"><span style="font-size: 50px;" >RateMe</span></a>
          
             <a href="#"></a>
 
@@ -18,7 +18,7 @@
             <ul class="navbar-nav mr-auto nav-right-items nav_icons">
                 <li class="nav-item">
                     <a class="nav-link" href="/">
-                        <i class="fas fa-home nav-icons"><span class="sr-only">(current)</span></i>
+                        <i class="fas fa-home nav-icons">HOME</i>
                     </a>
                 </li>
                
