--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,226 @@
 body{
-    background-color: aqua;
+    background-color: lightcyan;
 }
+
+header{
+    background-color: #FAFAFA;
+    border-bottom: 1px solid #dfc9d6;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 50;
+}
+
+.navigation{
+    display: flex;
+    flex-direction: row;
+    /* text-align: center; */
+    justify-content: center;
+    padding: 26px 20px;
+    flex-wrap: nowrap;
+    width: 100%;
+}
+
+.navigation a{
+    color: #111;
+}
+
+.instalogo{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 30%;
+}
+.instalogo a{
+    font-size: 25px;
+    padding-left: 10px;  
+}
+
+
+.nav_icons{
+    display: flex;
+    justify-content: flex-end;
+    width: 30%;
+}
+
+.nav_icons a{
+    padding-left: 20px;
+    font-size: 25px;
+    font-weight: lighter; 
+}
+
+.search_bar{
+    display: flex;
+    width:30%;
+    justify-content: center;
+    border-radius: 3px;
+    color: #999;
+    cursor: text;
+    text-align: center;
+    position: absolute;
+}
+
+
+.search_bar a{
+    font-size: 25px;
+    padding-left: 15px;
+}
+
+.content_container{
+    background-color: #FAFAFA;
+    padding-top: 10px;
+    position: absolute;
+    width: 100%;
+    top:83px;
+    left: 0px; 
+}
+
+.card{
+    background-color: #fff;
+    margin: 0 auto;
+    width: 614px;
+    height: auto;
+    border: .8px solid rgb(219, 198, 198);
+    border-radius: 4px;
+    margin-bottom: 60px; 
+}
+.dropdown-menu a {
+    white-space: normal;
+    left: 1000px;
+    padding-bottom: 100px;
+  }
+  
+  .dropdown-menu > li {
+    position: relative;
+  }
+  
+  .dropdown-menu > li > i {
+    position: absolute;
+    left: 0;
+    top: 3px;
+  }
+.card_header{
+    padding: 10px;
+   
+}
+#cardHeader{
+    border-radius: 50%; width:50px; height:50px; border-color: brown; border-width: 1px;
+}
+
+.card_header a{
+    text-decoration: none;
+    color: black;
+}
+.profile_image{
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    padding: 0;
+    margin: 0;
+    border: 0 solid #000;
+    border-radius: 50%;
+}
+.post_info{
+    display: inline-block;
+    padding-left: 14px;
+}
+
+.post_name{
+    font-size: 14px;
+    color: #111;
+    font-weight: 600;
+    padding: 0;
+    margin: 0;
+}
+.post_location{
+    font-size: 12px;
+    color: gray;
+    padding: 0;
+    margin: 0;
+}
+.post_options{
+    font-size: 15px;
+    display: inline-block;
+    margin: 4px;
+    padding: 5px;
+    color: #cccc;
+}
+
+.post_image img{
+    width: 100%;
+    height: 614px;
+}
+
+.tablinks{
+    display: inline-block;
+    width: 100%;
+    margin: 4px 0px 0px;
+    padding: 0px 16px;
+}
+.tablinks a{
+    padding: 7px;
+    font-size: 25px;
+    color: slategray;
+    font-weight: 600;
+
+}
+.fa-bookmark{
+    float: right;
+    margin-right: 25px;
+}
+
+.likes a{
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 500;
+    color:#111;
+    margin: 0px 0px 8px;
+    margin-left: 500;
+    padding: 0px 21px; 
+}
+
+.userName{
+    display: inline-block;
+    width: 100%;
+    padding: 0px 16px;
+}
+
+.userName a{
+    font-size: 10px;
+    font-weight: bold;
+    color: #000;
+    text-decoration: none;
+    display: inline-block;
+    padding-left: 5px;
+    margin-left: -5px;
+    padding-right: 5px; 
+}
+
+.userName span{
+    font-size: 14px;
+    font-weight: 500;
+    color: #111;
+    display: inline-block;
+    margin-right: 15px; 
+}
+
+
+.col-4{
+    margin: 0;
+    margin-left: 3%;
+    margin-top: 5%;
+}
+
+.side-footer{
+    margin: 0;
+    margin-top: 2%;
+    color: #929292;
+    font-weight: 200;
+    font-size: 75%;
+}
+@media (max-width: 576px) { 
+    .col-4 {
+        display: none;
+    }
+ }
