fixing login and user registration

--- a/rate/templates/base.html
+++ b/rate/templates/base.html
@@ -19,6 +19,10 @@
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
     {% bootstrap_css %}
       <link rel="stylesheet" href="{% static 'css/styles.css'%}">
+      <link rel="stylesheet" href="{% static 'css/login.css'%}">
+      <link rel="stylesheet" href="{% static 'css/logout.css'%}">
+
+
   {% endblock %}
 
 
