--- a/rate/templates/navbar.html
+++ b/rate/templates/navbar.html
@@ -37,7 +37,7 @@
                                     href="/" style="font-size: 20px;">Update Profile</a>
                                 <div class="card-footer">
                                     <a class="text-muted"><i class="fas fa-sign-out-alt "></i><a
-                                            href="" style="font-size: 20px;">Logout</a>
+                                            href="{%url 'logout'%}" style="font-size: 20px;">Logout</a>
                                 </div>
                             </li>
                         </ul>
