--- a/rate/templates/navbar.html
+++ b/rate/templates/navbar.html
@@ -24,7 +24,7 @@
                
                     <li class="dropdown" >
                         <a href="#" data-toggle="dropdown"><i class="far fa-user"></i>
-                            <span><img src="" alt=""
+                            <span><img src="{{profile.profile_photo.url}}" alt=""
                                     style="border-radius: 50%; width:50px; height:50px; border-color: brown; border-width: 1px;"></span>
                             <b class="caret"></b>
                         </a>
