--- a/rate/templates/navbar.html
+++ b/rate/templates/navbar.html
@@ -30,7 +30,7 @@
                         </a>
                         <ul class="dropdown-menu" st>
                             <li><i class="fas fa-plus btn btn-outline-info btn-sm"></i><a
-                                    href="/"style="font-size: 20px;">Post a Project</a></li>
+                                    href="{%url 'uploadProject'%}"style="font-size: 20px;">Post a Project</a></li>
                             <li><i class="fas fa-user btn btn-outline-info btn-sm"></i><a
                                     href="{%url 'profile'%}" style="font-size: 20px;">My Profile</a></li>
                             <li><i class="far fa-user-edit btn btn-outline-info btn-sm"></i><a
