--- a/rate/templates/profile.html
+++ b/rate/templates/profile.html
@@ -19,5 +19,20 @@
                 <a href="{%url 'edit' %}" class="btn btn-outline-info btn-sm">Edit Profile</a>
         </div>
     </div>
+    <h3 class="text-center">My Projects</h3>
+    <hr>
+    <div class="row">
+        {%for project in projects %}
+          <div class="card m-4" style="width: 22rem;">
+            <img class="card-img-top" src="{{project.image.url}}" alt="Card image cap">
+            <div class="card-body" style='background-color: rgb(205, 213, 255);' >
+              <h5 class="card-title" style="font-family: 'Sail', cursive;
+              font-family: 'Vast Shadow', cursive;"><b>Project Name :</b>{{project.project_name}}</h5>
+              <p class="card-text"><b>Project Description :</b><br>{{project.description}}</p>
+              <a href="{{project.livesite}}" target="_blank" class="btn btn-info">View Site</a>
+            </div>
+          </div>
+        {%endfor%}
+      </div>
 </div>
 {% endblock %}
