--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,78 @@
+
+/*--Banner--*/
+div.container.image{
+    padding: 6em 0 0;
+}
+div.container.imageloc{
+    padding: 4em 0 0;
+}
+.banner h2{
+    padding-bottom: 20px;
+}
+.banner-1 h2{
+    color: #c3c3c3;
+    text-align: center;
+    padding-top: 40px;
+}
+.banner{
+background: url(../images/rate.jpeg) no-repeat 0px 0px;
+background-size:contain;
+background-position: ;
+-webkit-background-size: cover;
+-o-background-size: cover;
+-ms-background-size: cover;
+-moz-background-size: cover;
+min-height: 400px;
+
+}
+.cover{
+    min-height: 450px;
+    width: inherit;
+    background: rgba(0,0,0,0.8)
+}
+.cover-1{
+    min-height: inherit;
+    width: inherit;
+    background: rgba(0,0,0,0.8)
+}
+.banner-1{
+background: url(./static/images/rate2.jpeg) no-repeat 0px 0px;
+background-size:cover;
+background-position: center;
+-webkit-background-size: cover;
+-o-background-size: cover;
+-ms-background-size: cover;
+-moz-background-size: cover;
+min-height: 250px;
+}
+.banner a {
+    font-size: 1em;
+    color: #fff;
+    font-weight: 600;
+    padding: 0.8em 2em;
+    background:#d18a19;
+}
+.banner a:hover {
+    color: #fff;
+    background: #000;
+}
+.banner h2 {
+    font-size:2.5em;
+    font-weight: 600;
+    color: #fff;
+}
+.banner {
+    text-align: center;
+}
+.banner p {
+    font-size: 1.2em;
+    color: rgba(255, 255, 255, 0.46);
+    font-weight: 400;
+    line-height: 1.8em;
+    margin: 5em auto 1em;
+    width: 70%;
+}
+/* End of Banner */
 body{
     background-color:lightgoldenrodyellow;
 }
