--- a/rate/templates/navbar.html
+++ b/rate/templates/navbar.html
@@ -8,9 +8,9 @@
             <a href="#"></a>
 
             <div class="search">
-                <form class="form-inline my-2 my-lg-0" role="search" action="/">
+                <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search' %}">
                     <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search"
-                        name="search_user">
+                        name="project">
                     <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
