creates rating functionality

--- a/rate/templates/index.html
+++ b/rate/templates/index.html
@@ -5,12 +5,6 @@
 
 
 {{ block.super}}
-{% block styles %}
-<link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
-<script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
-
-
-  {% endblock %}
 
 
 {% block content %}
@@ -34,10 +28,25 @@
             <p class="card-text"><b>Project Description :</b><br>{{project.description}}</p>
             <p class="card-text"><b>Project Author :</b><br>{{profile.authror}}</p>
             <a href="{{project.livesite}}" target="_blank" class="btn btn-info">View Site</a>
-            {% ratings object %}
+            <div class="ml-4" style="color:grey">
+              <div class="row">
+                <div class="col-md-12">
+                  <h6 style="color:blue">Design Rating</h6>
+                  {% ratings project %}
+                </div>
+                <div class="col-md-12">
+                  <h6 style="color:blue">Usability Rating</h6>
+                  {% ratings project %}
+                </div>
+                <div class="col-md-12">
+                  <h6 style="color:blue">Content Rating</h6>
+                  {% ratings project %}
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       {%endfor%}
     </div>
-  </div>
+</div>
 {%endblock%}
