--- a/rate/templates/index.html
+++ b/rate/templates/index.html
@@ -26,7 +26,7 @@
             <h5 class="card-title" style="font-family: 'Sail', cursive;
             font-family: 'Vast Shadow', cursive;"><b>Project Name :</b>{{project.project_name}}</h5>
             <p class="card-text"><b>Project Description :</b><br>{{project.description}}</p>
-            <p class="card-text"><b>Project Author :</b><br>{{project.user}}</p>
+            <p class="card-text"><b>Project Author :</b><br>{{project.author}}</p>
             <p class="card-text"><b>Project Posted on :</b><br>{{project.date_posted}}</p>
 
             <a href="{{project.livesite}}" target="_blank" class="btn btn-info">View Site</a>
